# apex-dev

./: .cursorrules  .gitignore  LAMBDA_ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  env.template  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  turbo.json  vercel.json
.cursor/: README.md  mcp_servers.json
acu-dashboard-beta-main/: package.json
app/: globals.css  layout.tsx  page.tsx
components/: add-student-modal.tsx  company-history.tsx  company-standings.tsx  core-value-breakdown.tsx  dashboard-layout.tsx  dashboard-shell.tsx  delete-student-dialog.tsx  edit-score-modal.tsx  four-pillars-chart.tsx  historical-chart.tsx  student-scores-table.tsx  student-selector.tsx  theme-toggle.tsx
data/: students.json
docs/: DATABASE_SCHEMA_PLANNING.md  DEPLOYMENT_GUIDE.md  EVENT_SUBMISSION_USAGE_EXAMPLES.md  (+4 more)
lib/: data.ts
scripts/python/: COMPANY_SCORING_SUMMARY.md  Dockerfile  README.md  SUCCESS_SUMMARY.md  aws-deploy.sh  bell_curve_calculator.py  company_score_calculator.py  daily_score_calculation.py  docker-compose.yml  env.example  generate_dummy_data.py  pyproject.toml  requirements.txt  score_validator.py  settings.ini  setup.py  setup.sh  subcategory_aggregators.py
scripts/python/apex_scoring/: __init__.py  aggregators.py  bell_curve.py  company_scores.py  validator.py
scripts/python/apex_scoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/python/nbs/: 00-bell-curve.ipynb  01-subcategory-aggregators.ipynb  02-company-scores.ipynb  03-daily-orchestrator.ipynb  05-generate-dummy-submissions.ipynb  README.md
(+177 files in other folders)
