[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex_scoring"
version = "0.1.0"
description = "ACU Apex Holistic GPA scoring system"
authors = [{name = "ACU Apex Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0", 
    "pandas>=2.2.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbdev>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apex_scoring*"]
